--- a/docs/00-introduction.ipynb
+++ b/docs/00-introduction.ipynb
@@ -37,12 +37,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-24T13:01:09.317883Z",
+     "start_time": "2024-06-24T13:01:07.128852Z"
+    }
+   },
    "source": [
     "!pip install -qU semantic-router"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 2
   },
   {
    "cell_type": "markdown",
@@ -53,18 +58,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\Siraj\\Documents\\Personal\\Work\\Aurelio\\Virtual Environments\\semantic_router_3\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-24T13:01:11.148574Z",
+     "start_time": "2024-06-24T13:01:11.144116Z"
     }
-   ],
+   },
    "source": [
     "from semantic_router import Route\n",
     "\n",
@@ -79,7 +78,9 @@
     "        \"they will save the country!\",\n",
     "    ],\n",
     ")"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 3
   },
   {
    "cell_type": "markdown",
@@ -90,9 +91,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-24T13:01:17.762509Z",
+     "start_time": "2024-06-24T13:01:17.758475Z"
+    }
+   },
    "source": [
     "chitchat = Route(\n",
     "    name=\"chitchat\",\n",
@@ -106,7 +110,9 @@
     ")\n",
     "\n",
     "routes = [politics, chitchat]"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 4
   },
   {
    "cell_type": "markdown",
@@ -117,24 +123,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-24T15:06:26.679674Z",
+     "start_time": "2024-06-24T15:06:20.501153Z"
+    }
+   },
    "source": [
     "import os\n",
     "from getpass import getpass\n",
     "from semantic_router.encoders import CohereEncoder, OpenAIEncoder\n",
     "\n",
-    "# os.environ[\"COHERE_API_KEY\"] = os.getenv(\"COHERE_API_KEY\") or getpass(\n",
-    "#     \"Enter Cohere API Key: \"\n",
-    "# )\n",
-    "os.environ[\"OPENAI_API_KEY\"] = os.getenv(\"OPENAI_API_KEY\") or getpass(\n",
-    "    \"Enter OpenAI API Key: \"\n",
+    "os.environ[\"COHERE_API_KEY\"] = os.getenv(\"COHERE_API_KEY\") or getpass(\n",
+    "    \"Enter Cohere API Key: \"\n",
     ")\n",
+    "# os.environ[\"OPENAI_API_KEY\"] = os.getenv(\"OPENAI_API_KEY\") or getpass(\n",
+    "#     \"Enter OpenAI API Key: \"\n",
+    "# )\n",
     "\n",
-    "# encoder = CohereEncoder()\n",
-    "encoder = OpenAIEncoder()"
-   ]
+    "encoder = CohereEncoder()\n",
+    "# encoder = OpenAIEncoder()"
+   ],
+   "outputs": [],
+   "execution_count": 6
   },
   {
    "cell_type": "markdown",
@@ -145,22 +156,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[32m2024-05-07 15:02:46 INFO semantic_router.utils.logger local\u001b[0m\n"
-     ]
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-24T15:06:35.872238Z",
+     "start_time": "2024-06-24T15:06:33.549981Z"
     }
-   ],
+   },
    "source": [
     "from semantic_router.layer import RouteLayer\n",
     "\n",
     "rl = RouteLayer(encoder=encoder, routes=routes)"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 7
   },
   {
    "cell_type": "markdown",
@@ -171,8 +179,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-24T15:06:48.136016Z",
+     "start_time": "2024-06-24T15:06:47.702748Z"
+    }
+   },
+   "source": [
+    "rl(\"don't you love politics?\")"
+   ],
    "outputs": [
     {
      "data": {
@@ -180,19 +195,24 @@
        "RouteChoice(name='politics', function_call=None, similarity_score=None)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "rl(\"don't you love politics?\")"
-   ]
+   "execution_count": 8
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-24T15:07:01.536022Z",
+     "start_time": "2024-06-24T15:07:01.080735Z"
+    }
+   },
+   "source": [
+    "rl(\"how's the weather today?\")"
+   ],
    "outputs": [
     {
      "data": {
@@ -200,14 +220,12 @@
        "RouteChoice(name='chitchat', function_call=None, similarity_score=None)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "rl(\"how's the weather today?\")"
-   ]
+   "execution_count": 9
   },
   {
    "cell_type": "markdown",
@@ -218,8 +236,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-24T15:07:18.947787Z",
+     "start_time": "2024-06-24T15:07:18.475524Z"
+    }
+   },
+   "source": [
+    "rl(\"I'm interested in learning about llama 2\")"
+   ],
    "outputs": [
     {
      "data": {
@@ -227,14 +252,12 @@
        "RouteChoice(name=None, function_call=None, similarity_score=None)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "rl(\"I'm interested in learning about llama 2\")"
-   ]
+   "execution_count": 10
   },
   {
    "cell_type": "markdown",
@@ -245,29 +268,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-24T15:08:07.482966Z",
+     "start_time": "2024-06-24T15:08:06.950454Z"
+    }
+   },
+   "source": [
+    "rl.retrieve_multiple_routes(\"Hi! How are you doing in politics??\")"
+   ],
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[RouteChoice(name='politics', function_call=None, similarity_score=0.8595844842560181),\n",
-       " RouteChoice(name='chitchat', function_call=None, similarity_score=0.8356704527362284)]"
+       "[RouteChoice(name='politics', function_call=None, similarity_score=0.4894706980845658),\n",
+       " RouteChoice(name='chitchat', function_call=None, similarity_score=0.5797896224871903)]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "rl.retrieve_multiple_routes(\"Hi! How are you doing in politics??\")"
-   ]
+   "execution_count": 11
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-24T15:11:19.170886Z",
+     "start_time": "2024-06-24T15:11:18.665648Z"
+    }
+   },
+   "source": "rl.retrieve_multiple_routes(\"I'm interested in learning about llama 2\")",
    "outputs": [
     {
      "data": {
@@ -275,14 +308,12 @@
        "[]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "rl.retrieve_multiple_routes(\"I'm interested in learning about llama 2\")"
-   ]
+   "execution_count": 14
   },
   {
    "cell_type": "code",
